Dedup, categorise, and make save() idempotent
TransactionAssembler is the new core: merges evidence for the same real
transaction (a message uploaded twice by the phone, or the same event
reported on two channels) keyed by (account, direction, amount,
occurredAt), then decides MICRO/TRANSFER by evidence, not keywords.

MICRO: a UPI debit <= Rs.100. Checked against actual small-value
non-UPI debits in the corpus (RELIANCE SMART, SPOTIFY, DMART all appear
under Rs.100 and must stay SPEND) - the merchant has to start with UPI,
amount alone isn't enough.

TRANSFER: pairs opposite-direction, same-amount, same-counterparty-
suffix legs across the two tracked accounts within a time window,
rather than trusting a "SELF" or IMPS/P2A label. Verified against the
corpus by hand first: IMPS/P2A/PARAG KAPOOR legs pair up and sum exactly
to corpus-a-totals.json's transfer figures; NEFT INWARD SELF and
IMPS/P2A/RAHUL SHARMA both look like transfers by name but have no
matching leg anywhere in the corpus, so they must stay INCOME/SPEND.

LedgerStore.save() contract changed from "may duplicate" to idempotent
by natural key (merges sourceMessageIds, no double-count) - the only way
re-ingesting an overlapping corpus can leave the ledger unchanged, which
the brief requires. Implemented for both InMemoryLedgerStore and
SqlLedgerStore (a lookup-before-write, not a schema constraint - V3
adds a non-unique index for that lookup; V2's legacy duplicate rows
would fail a real UNIQUE constraint).

V4 adds balance_snapshot, a second small stream alongside the ledger:
the balance the bank quoted after a transaction, when it quoted one -
feeds Reports.reconciliation() in the next commit.